# pycc

./: .gitignore  pyproject.toml
example/: config.json  exchange.py  future.py  main.py  spot.py  wallet.py
examples/: config.json  main.py
examples/app/: app.py  config.json
examples/data/: local.py
examples/exchange/: config.json  exchange.py  future.py  spot.py  wallet.py  wss.py
examples/local_data/: load_dataframe.py
pyccx/: data_collector.py  defaults.py  utils.py
pyccx/app/: application.py  context.py  job.py  job_queue.py
pyccx/constant/: hedge_mode.py  order_side.py  order_status.py  position_type.py  time_frame.py
pyccx/data/: __init__.py  live.py  live_data.py  local.py  local_data.py
pyccx/exchange/binance/future/: decoder.py  decorator.py  decorators.py  encoder.py  https.py  market.py  trade.py  ws.py  wss.py
pyccx/exchange/bitget/future/: decoder.py  decorator.py  decorators.py  encoder.py  https.py  market.py  trade.py  ws.py
pyccx/exchange/mexc/future/: decorators.py  https.py  trade.py
pyccx/exchanges/binance/future/: decorators.py  exception.py  https.py  market.py  trade.py
pyccx/exchanges/bitget/future/: decorators.py  https.py  market.py  trade.py
pyccx/exchanges/mexc/future/: exception.py  https.py  market.py  trade.py  ws.py
pyccx/interface/: client.py  decorator.py  exchange.py  future.py  https.py  market.py  spot.py  trade.py  ws.py  wss.py
pyccx/model/: balance.py  candle.py  order.py  position.py  symbol_info.py
pyccx/utils/: __init__.py  directory.py  function.py  pandas.py  ws.py
scripts/: main.py
src/constant/: order_type.py  position_side.py  symbol.py  time_frame.py
src/exchanges/binance/future/: decorators.py  https.py  market.py  trade.py  ws.py
src/interface/: exchange.py  future.py  https.py  market.py  spot.py  trade.py  wallet.py
src/model/: balance.py  order.py  position.py  symbol_info.py
src/utils/: event.py
(+9 files in other folders)
