[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyccx"
version = "0.1.27"
authors = [
  { name="Sahand Nazarzadeh", email="sahand.nazarzadeh@gmail.com" },
]
description = "Python Crypto Currency Exchanges"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "tqdm==4.66.1",
    "pandas==2.1.1",
    "requests==2.31.0",
    "python-socks==2.4.3",
    "apscheduler==3.10.4",
    "websocket-client==1.7.0",
]
